--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                             <h3 class="mb-5"></h3>
                             <h4 class="mt-0">DOCUMENTATION</h4>
                             <ul class="text-small doc-infor">
-                                <li>Doc version: 2.0.0</li>
+                                <li>Doc version: 3.0.0</li>
                                 <li>Created: 15 April 2024</li>
-                                <li>Last update: 15 May 2024</li>
+                                <li>Last update: 28 May 2024</li>
                             </ul>
                             <h3 class="mb-5"></h3>
                         </section>
@@ -178,11 +178,13 @@
                             </p>
                             <h3 id="change-log">Change log</h3>
                                 <pre class="brush: html">
-                                    VERSION 2.0
+                                    VERSION 3.0.0
+                                    - Add RTL Template (Front-end)
+                                    VERSION 2.0.0
                                     - Add Dashboard Template
-                                    VERSION 1.0
+                                    VERSION 1.0.0
                                     - First release.
-                                </pre>
+                                 </pre>
                             <h2 id="structure">STRUCTURE</h2>
                             <h3 id="product-structure">Products Files Structure</h3>
                             <div class="files-folder-lists">
