--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
                             <ol>
                                 <li>HTML Frontend Template (built from Gulp)</li>
                                 <li>HTML Frontend Development source code</li>
+                                <li>HTML Frontend RTL Template (built from Gulp)</li>
+                                <li>HTML Frontend RTL Development source code</li>
                                 <li>HTML Dashboard Template (built from Gulp)</li>
                                 <li>HTML Dashboard Development source code</li>
                                 <li><a href="https://graphicriver.net/item/travila-modern-travel-tour-booking-figma-template/51234875">Figma design file</a></li>
