--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="d-flex align-items-center">
                     <div class="nav-list me-5">
                         <a href="https://travila.netlify.app/" target="_blank"><i class="fas fa-external-link-alt me-2"></i>Frontend Demo</a>
+                        <a href="https://travila-demo-rtl.vercel.app/" target="_blank"><i class="fas fa-external-link-alt me-2"></i>RTL Demo</a>
                         <a href="https://travila-dashboard-html.netlify.app/" target="_blank"><i class="fas fa-external-link-alt me-2"></i>Dashboard Demo</a>
                         <a href="https://alithemes.ticksy.com/" target="_blank"><i class="far fa-life-ring me-2"></i>Support</a>
                         <a href="https://themeforest.net/user/alithemes/portfolio/" target="_blank"><i class="fas fa-th me-2"></i>Portfolio</a>
